# CRepo

./: .cproject  .gitignore  CMakeLists.txt  README.md  main.c
1-6/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  exercise6.c  exercises1-6.h  main.c
12-16/: exercise12.c  exercise13.c  exercise14.c  exercise15.c  exercise16.c  exercises12-16.h
17-22/: exercise17.c  exercise17.h  exercise18.c  exercise18.h  exercise19.c  exercise19.h  exercise20.c  exercise20.h  exercise21.c  exercise21.h  exercise22.c  exercise22.h  exercises17-22.h
23-28/: exercise23.c  exercise23.h  exercise24.c  exercise24.h  exercise25.c  exercise25.h  exercises23-28.h
23-28/PointerToCode/: PointerToPointer1.c
7-11/: exercise10.c  exercise7.c  exercise8.c  exercise9.c  exercises7-11.h
Binaries/: c_repo
Debug/: makefile
Debug/src/: subdir.mk
TrainSextant/: GenericGenericson.c  GenericGenericson.h  main.c  readFromStruct.c  readFromStruct.h  struct.h  trainMain.c  trainMain.h  write.c  write.h  writeToTrain.c  writeToTrain.h
decoration/: decoration.c  decoration.h
src/: 7-11.c
